# m365-copilot-gateway

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: AGENTS.md  ATTRIBUTIONS.md  PRODUCT.md  QUICKSTART.md  ROADMAP.md  TOKEN_CDP.md  protocol.md
scripts/: probe_oauth_device.py  probe_tone.py  run_assist_bg.py  smoke_tool_loop.py
src/mcg/: __init__.py  cli.py  config.py  models_catalog.py  models_probe.py
src/mcg/agent/: __init__.py  studio.py
src/mcg/api/: app.py  chat_format.py  errors.py  rate_limit.py  routes_admin.py  routes_anthropic.py  routes_chat.py  routes_openai.py  routes_ui.py  session_pool.py
src/mcg/auth/: __init__.py  deps.py
src/mcg/compat/: __init__.py  anthropic_messages.py  canonical.py  openai_chat.py  reasoning.py
src/mcg/multimodal/: __init__.py  adapter.py
src/mcg/pool/: __init__.py  sessions.py  store.py
src/mcg/substrate/: __init__.py  client.py  protocol.py
src/mcg/token/: __init__.py  cdp.py  fabric.py  jwtutil.py  keepalive.py  login_assist.py  oauth.py  sydney_msal.py
src/mcg/tools/: __init__.py  agents.py  inject.py  local_exec.py  loop.py  platform_adapt.py  repair.py  sanitize.py  stream_filter.py
src/mcg/webui/static/: app.css  capture.bookmarklet.js  capture.user.js
src/mcg/webui/templates/: dashboard.html  settings.html
tests/: test_agents.py  test_cdp_extract.py  test_errors.py  test_fold.py  test_jwt.py  test_keepalive_and_jwt.py  test_oauth_probe_notes.py  test_oauth_refresh_payload.py  test_p0_features.py  test_platform_adapt.py  test_pool_core.py  test_reasoning_protocol.py  test_stream_filter.py  test_stream_tail.py  test_stream_tools.py  test_sydney_msal.py  test_tool_loop_prompt.py  test_tool_repair.py
