[project]
name = "m365-copilot-gateway"
version = "0.1.0"
description = "Authoritative Microsoft 365 Copilot Substrate reverse proxy — OpenAI/Anthropic compatible gateway with account pool, WebUI, and multi-agent tool loop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "uefi2333" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "orjson>=3.10.0",
  "jinja2>=3.1.0",
  "itsdangerous>=2.2.0",
  "aiofiles>=24.1.0",
  "pyyaml>=6.0.0",
  "msal>=1.28.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.48.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.scripts]
mcg = "mcg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"


[tool.hatch.build.targets.wheel.force-include]
"src/mcg/webui" = "mcg/webui"
"src/mcg/webui/static" = "mcg/webui/static"
"src/mcg/webui/templates" = "mcg/webui/templates"
